--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "muslih-fvnky-market",
   "version": "1.0.0",
   "description": "Upload komentar + file ke Dropbox",
-  "main": "index.js",
+  "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "vercel dev",
     "build": "echo 'Vercel handles build automatically'"
   },
   "dependencies": {
     "formidable": "^3.5.1",
-    "dropbox": "^10.34.0",
-    "node-fetch": "^3.3.2"
+    "dropbox": "^10.34.0"
   }
 }
