--- a/package.json
+++ b/package.json
@@ -2,16 +2,14 @@
   "name": "muslih-fvnky-market",
   "version": "1.0.0",
   "description": "Upload komentar + file ke Dropbox",
-  "type": "module",
-  "engines": {
-    "node": "18.x"
-  },
+  "main": "index.js",
   "scripts": {
     "start": "vercel dev",
     "build": "echo 'Vercel handles build automatically'"
   },
   "dependencies": {
     "formidable": "^3.5.1",
-    "dropbox": "^10.34.0"
+    "dropbox": "^10.34.0",
+    "node-fetch": "^3.3.2"
   }
 }
