--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "muslih-fvnky-market",
   "version": "1.0.0",
-  "description": "Upload komentar + file ke Dropbox",
-  "main": "index.js",
+  "type": "module",
+  "description": "Upload komentar + file ke Dropbox (serverless on Vercel)",
   "scripts": {
     "start": "vercel dev",
-    "build": "echo 'Vercel handles build automatically'"
+    "build": "echo \"Vercel handles build automatically\""
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
-    "formidable": "^3.5.1",
-    "dropbox": "^10.34.0",
-    "node-fetch": "^3.3.2"
+    "formidable": "^3.5.1"
   }
 }
